style: image preview stretch issue

--- a/src/app/components/profile/about-image/about-image.component.scss
+++ b/src/app/components/profile/about-image/about-image.component.scss
@@ -32,14 +32,15 @@
     }
 }
 .preview-image {
-    width: 482px;
+    width: 480px;
     height: 482px;
     position: absolute;
     top: 0;
     left: 0;
     @include mq($from: $mobile_sm, $until: $mobile_lg) {
         width: 100%;
-        height: 100%;
+        height: auto;
+        margin-bottom: 15%;
     }
 }
 .o-cover-media__browse{
